# audraflow

./: .gitignore  .gitmodules  CODE_REVIEW.md  Cargo.toml  README.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: linux-release.yml  macos-release.yml  windows-release.yml
asr-runtime/: Cargo.toml  build.rs
asr-runtime/src/: audio_pipeline.rs  benchmark.rs  diarization.rs  funasr_engine.rs  main.rs  sensevoice_engine.rs  whisper_engine.rs
asr-runtime/src/main_parts/: asr_engines.rs  cli.rs  demucs.rs  diarization.rs  music_segments.rs  runtime_ipc.rs  tests.rs  types.rs  whisper_pipeline.rs
cli/: Cargo.toml
cli/src/: main.rs
crates/export/: Cargo.toml
crates/export/src/: lib.rs
crates/ipc/: Cargo.toml
crates/ipc/src/: lib.rs
crates/licensing/: Cargo.toml
crates/licensing/src/: lib.rs
crates/model-manager/: Cargo.toml
crates/model-manager/src/: lib.rs
crates/post-processor/: Cargo.toml
crates/post-processor/src/: lib.rs
crates/scheduler/: Cargo.toml
crates/scheduler/src/: lib.rs
crates/storage/: Cargo.toml
crates/storage/src/: lib.rs
docs/: Alpha1_Interface_Freeze.md  Linux_Release_Validation.md  Release_Handoff_Checklist.md  Windows_Release_Validation.md
orchestrator/: Cargo.toml
orchestrator/src/: batch_queue.rs  checkpoint.rs  ipc_server.rs  job_manager.rs  main.rs  telemetry.rs
orchestrator/src/main_parts/: background_loops.rs  checkpoint_recovery.rs  disk_paths.rs  glossary.rs  job_processor.rs  main_entry.rs  runtime_command.rs  runtime_execution.rs  state.rs  test_simulation.rs  tests.rs
scripts/: before-tauri-build.mjs  prepare-runtime-assets.mjs  prepare-windows-runtime.ps1  release-manifest.mjs  smoke-e2e.mjs  smoke-e2e.ps1  smoke-e2e.sh  stage-sidecars.mjs  verify-windows-release.ps1
src/: App.css  App.tsx  appUtils.ts  i18n.tsx  i18nContext.ts  index.css  tauri.ts  types.ts  useI18n.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.linux.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src-tauri/src/lib_parts/: device_health.rs  dto.rs  export_commands.rs  ipc_storage.rs  job_commands.rs  license_commands.rs  media_download.rs  media_support.rs  python_runtime.rs  runtime_components.rs  runtime_dependency_probes.rs  settings_commands.rs  telemetry_models.rs  tests.rs  tool_paths.rs
src-tauri/windows/: nsis-hooks.nsh
src-tauri/windows-runtime/: .gitkeep
src/components/: AppNavigation.tsx  TelemetryConsentDialog.tsx
src/pages/: EditorPage.tsx  ExportPage.tsx  ImportPage.tsx  QueuePage.tsx  SettingsPage.tsx
src/pages/editor/: EditorView.tsx  editorUtils.ts
src/pages/settings/: SettingsContent.tsx
src/styles/: base.css  editor.css  layout.css  polish.css  responsive.css  settings.css
