[workspace]
resolver = "2"
members = [
  "src-tauri",
  "crates/export",
  "crates/licensing",
  "crates/scheduler",
  "crates/storage",
  "crates/ipc",
  "crates/post-processor",
  "crates/model-manager",
  "orchestrator",
  "asr-runtime",
  "cli",
]

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.11"
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.34", features = ["bundled"] }
anyhow = "1"
