[package]
name = "audraflow-licensing"
version = "0.1.0"
edition = "2021"
description = "AudraFlow license activation, validation, and trial management"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
sha2 = "0.10"
hostname = "0.4"
rand = "0.9"
tempfile = "3"
