[package]
name = "audraflow-model-manager"
version = "0.1.0"
edition = "2021"
description = "AudraFlow model download, verification, cache, and version management"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
sha2 = "0.10"
reqwest = { version = "0.12", features = ["blocking", "rustls-tls"], default-features = false }

[dev-dependencies]
tempfile = "3"
