[package]
name = "audraflow-storage"
version = "0.1.0"
edition = "2021"
description = "AudraFlow SQLite + FTS5 storage layer with unified transcript schema"

[dependencies]
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
anyhow = { workspace = true }

audraflow-ipc = { path = "../ipc" }

[dev-dependencies]
tempfile = "3"
